name:                func-invaders
version:             1.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/func-invaders#readme
license:             GPL-3
license-file:        LICENSE
author:              Pietro Di Consolo Gregorio
maintainer:          pietro.dcg@gmail.com
category:            Games
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable func-invaders
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Controls, World
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , parallel
                     , random
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N